--- a/index.qmd
+++ b/index.qmd
@@ -9,3 +9,6 @@ To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
 ```{r}
 1 + 1
 ```
+check <https://dataisdifficult.github.io/PAPERLongTermImpactofWaronLifeSatisfaction.html>
+
+check <PAPERLongTermImpactofWaronLifeSatisfaction.html>
