--- a/index.qmd
+++ b/index.qmd
@@ -17,7 +17,7 @@ image: Tom.jfif
 
 **Welcome to my website!**
 
-I am professor of economics at the [University of Canterbury](https://www.canterbury.ac.nz/).
+I am a professor of economics at the [University of Canterbury](https://www.canterbury.ac.nz/).
 
 My teaching and research focus on data analysis. Examples of my research and teaching can be found under tabs above.
 
